fix video tag bugs on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,10 @@
   margin: 0;
 }
 
+video {
+  pointer-events: none !important;
+}
+
 /* ------------------------------- FONTS -------------------------------  */
 
 /* ------------------------------- DRUK FONT -------------------------------  */
